--- a/style.css
+++ b/style.css
@@ -5,3 +5,50 @@
 #navbar{
     background-color: #000000;
 }
+#buttoons a{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+}
+:root{
+    --red:#f42625;
+    --white:#ffffff;
+    --black:#000000;
+}
+.franchise:hover {
+    background-color: #ff3a3a50;
+}
+.order-online:hover {
+    border-color: rgba(255, 0, 0, 0.847) ;
+}
+.franchise {
+    cursor: pointer;
+    background-color: #000000;
+    text-decoration: none;
+}
+.order-online {
+    cursor: pointer;
+    background-color:var(--red);  
+}
+a {
+    font-weight: 500;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.h1 {
+    font-family: 'Abril Fatface', serif;
+    font-size: 48px;
+    color: var(--red) ;
+}
+.h2 {
+    font-family: 'Abril Fatface', serif;
+    font-size: 48px;
+    color: var(--white) ;
+}
+.p1 {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.p2 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    font-size: large;
+    color: #808080;
+}
