--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    color: #ffffff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .logo{
     width: 140px;
     cursor: pointer;
@@ -21,9 +28,7 @@
     border-color: rgba(255, 0, 0, 0.847) ;
 }
 .franchise {
-    cursor: pointer;
     background-color: #000000;
-    text-decoration: none;
 }
 .order-online {
     cursor: pointer;
@@ -35,20 +40,49 @@ a {
 }
 .h1 {
     font-family: 'Abril Fatface', serif;
-    font-size: 48px;
+    font-size: 3rem;
     color: var(--red) ;
 }
 .h2 {
     font-family: 'Abril Fatface', serif;
-    font-size: 48px;
+    font-size: 3rem;
     color: var(--white) ;
 }
 .p1 {
     font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.5rem;
 }
 .p2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: lighter;
     font-size: large;
     color: #808080;
+}
+.bg-black{
+    background-color: var(--black);
+}
+.franchises {
+    background-image: url(./assets/sgrey.webp) ;
+    background-repeat: no-repeat;
+    background-position-x:right;
+    background-position-y:4rem ;
+    position: relative;
+    
+
+
+}
+.bg-grey{
+    background-color: #0f0f0f;
+}
+.islamabad {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 7px ;
+    font-weight: 100;    
+    color: var(--red);                   
+}
+#icon{
+    color: grey ;
+}
+.text-red{
+    color: var(--red);
 }
